--- a/Analysis_and_Model.ipynb
+++ b/Analysis_and_Model.ipynb
@@ -19,11 +19,11 @@
     "### Approach\n",
     "\n",
     "1. **Feature Selection**:\n",
-    "   - **Key Predictive Features**: `Street`, `Start_Time`, `Severity`, `Visibility(miles)`, `Precipitation(in)` and `Weather_Condition`.\n",
+    "   - **Key Predictive Features**: `Street`,`City`, `Start_Time`, `Severity`, `Visibility(miles)`, `Precipitation(in)`, `Temperature(F)`, `Humidity(%)` and `Weather_Condition`.\n",
     "   - **Data Transformation**:\n",
     "     - **Time-Based Features**: Extract details like hour of the day, day of the week, and month from `Start_Time` to capture patterns in accident occurrences.\n",
     "     - **Accident Severity**: This feature helps highlight higher-risk times with more severe accidents.\n",
-    "     - **Environmental Conditions**: `Visibility(miles)`, `Precipitation(in)` and `Weather_Condition` provide essential information, as weather has a major impact on accident risk.\n",
+    "     - **Environmental Conditions**: `Visibility(miles)`, `Precipitation(in)`, `Temperature(F)`, `Humidity(%)` and `Weather_Condition` provide essential information, as weather has a major impact on accident risk.\n",
     "\n",
     "2. **Modeling Approach**:\n",
     "   - **Data Preprocessing**: Encode categorical variables (e.g., `Weather_Condition`, `Street`, `City`) and standardize continuous features like `Visibility`.\n",
